--- a/report.html
+++ b/report.html
@@ -38,7 +38,7 @@ modelo-amostragem-recente: Amostragem Recente
 	<!-- CSS Files -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
-	<link rel="stylesheet" href="./assets/css/paper-dashboard.css" />
+	<link rel="stylesheet" href="https://holetz.github.io/reports_ml/assets/css/paper-dashboard.css" />
 </head>
 
 <body class="">
