--- a/report.html
+++ b/report.html
@@ -30,7 +30,7 @@ modelo-amostragem-recente: Amostragem Recente
 	<meta charset="utf-8" />
 	<link rel="icon" type="image/x-icon" href="https://holetz.github.io/reports_ml/assets/img/favicon.ico">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-	<title>Relatório de Modelo - {modelo-nome-curto}</title>
+	<title>Relatório de Modeloqwe - {modelo-nome-curto}</title>
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
 	<!-- Fonts and icons     -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
