--- a/report.html
+++ b/report.html
@@ -181,40 +181,7 @@ modelo-amostragem-recente: Amostragem Recente
 								<div class="card-body ">
 									<div class="row">
 										<div class="col">
-											<table class="table table-striped table-borderless">
-												<thead class="">
-													<th>Origem</th>
-													<th class="text-right">Salary</th>
-												</thead>
-												<tbody>
-													<tr>
-														<td>Dakota Rice</td>
-														<td class="text-right">$36,738</td>
-													</tr>
-													<tr>
-														<td>Dakota Rice</td>
-														<td class="text-right">$36,738</td>
-													</tr>
-													<tr>
-														<td>Dakota Rice</td>
-														<td class="text-right">$36,738</td>
-													</tr>
-													<tr>
-														<td>Dakota Rice</td>
-														<td class="text-right">$36,738</td>
-													</tr>
-													<tr>
-														<td>Dakota Rice</td>
-														<td class="text-right">$36,738</td>
-													</tr>
-												</tbody>
-												<tfoot class="font-weight-bold">
-													<tr>
-														<td>Total:</td>
-														<td class="text-right">123</td>
-													</tr>
-												</tfoot>
-											</table>
+											{table-variaveis-entrada}
 											<hr>
 											<h6>Seleção de Variáveis</h6>
 											<p>qweqweqwe qwe qwe qweqweqweqwe</p>
