--- a/report.html
+++ b/report.html
@@ -30,7 +30,7 @@ modelo-amostragem-recente: Amostragem Recente
 	<meta charset="utf-8" />
 	<link rel="icon" type="image/x-icon" href="https://holetz.github.io/reports_ml/assets/img/favicon.ico">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-	<title>Relatório de Modeloqwe - {modelo-nome-curto}</title>
+	<title>Relatório de Modelo - {modelo-nome-curto}</title>
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
 	<!-- Fonts and icons     -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
@@ -94,7 +94,7 @@ modelo-amostragem-recente: Amostragem Recente
 						<div class="col-xl-6 col-12 d-flex">
 							<div class="card flex-fill">
 								<div class="card-header">
-									<h5><i class="bi bi-file-ruled"></i> Ficha do Modelo</h5>
+									<h5 class="card-title"><i class="bi bi-file-ruled"></i> Ficha do Modelo</h5>
 								</div>
 								<div class="card-body">
 									<div class="row">
@@ -176,7 +176,7 @@ modelo-amostragem-recente: Amostragem Recente
 						<div class="col-xl-6 col-12 d-flex">
 							<div class="card card-stats flex-fill">
 								<div class="card-header">
-									<h5><i class="bi bi-columns-gap"></i>&nbsp;&nbsp;Variáveis de Entrada</h5>
+									<h5 class="card-title"><i class="bi bi-columns-gap"></i>&nbsp;&nbsp;Variáveis de Entrada</h5>
 								</div>
 								<div class="card-body ">
 									<div class="row">
