--- a/report.html
+++ b/report.html
@@ -264,6 +264,18 @@ graph-resposta-estabilidade
                                         </div>
                                     </div>
                                 </div>
+                                <div class="card-footer">
+                                    <hr>
+                                    <div class="stats dropdown-toggle help" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        <i class="bi bi-info-circle"></i> Info
+                                        <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownMenuLink">
+                                            <div class="dropdown-item text-wrap bg-light" style="color:#252422 !important">
+                                                Exclusões referem-se às observações que não fazem parte da população escorável, e que não serão utilizadas no processo de modelagem. Ou seja, os cooperados que forem classificados como exclusão não recebem uma propensão de utilização de cheque especial
+                                                em produção.
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
